--- a/apps/package.json
+++ b/apps/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.2",
+    "editor.md": "^1.5.0",
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
