--- a/apps/package.json
+++ b/apps/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.3.1",
     "simplemde": "^1.11.2",
     "vue": "^2.5.2",
+    "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
