--- a/apps/package.json
+++ b/apps/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.2",
+    "github-markdown-css": "^2.10.0",
+    "highlight.js": "^9.12.0",
     "jquery": "^3.3.1",
-    "simplemde": "^1.11.2",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-simplemde": "^0.4.8"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
