--- a/apps/package.json
+++ b/apps/package.json
@@ -15,6 +15,7 @@
     "highlight.js": "^9.12.0",
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
+    "vue-file-upload": "^0.1.9",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
     "vue-simplemde": "^0.4.8"
@@ -38,6 +39,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.8.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -45,6 +47,8 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass": "^1.1.1",
+    "sass-loader": "^6.0.7",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "style-loader": "^0.20.3",
